Fix CI: replace JDK 21-only Math.clamp with a portable clamp
CI compiles against a real JDK 17 (matching the declared
sourceCompatibility), which rejected Math.clamp(int,int,int) — added in
Java 21. This build's sourceCompatibility/targetCompatibility only set
the bytecode version, not the API surface, so the JDK 21 sandbox used
during development compiled it silently.

Also set javac's --release 17 explicitly so local builds enforce the
same JDK 17 API surface CI does, catching this class of mismatch before
it reaches a push.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01ALXhcs9Sf1PGAaybznJtCq