@@ -57,7 +57,7 @@ public class ChatController {
                                      @PathVariable UUID chatId,
                                      @RequestParam(required = false) Long beforeSeq,
                                      @RequestParam(defaultValue = "50") int limit) {
-        int bounded = Math.clamp(limit, 1, MAX_PAGE_SIZE);
+        int bounded = Math.min(Math.max(limit, 1), MAX_PAGE_SIZE);
         return messageService.history(chatId, principal.id(), beforeSeq, bounded).stream()
                 .map(MessageDTO::from)
                 .toList();
